fix issue with extra padding

--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0.75em 1em;
+  padding: 0.75em 0;
 }
 
 .logo {
@@ -21,6 +21,7 @@
   max-width: 1600px;
   width: 100%;
   margin: 0 auto;
+  padding: 0 1em;
 }
 
 .nav__toggle {
